updated body styling to avoid using vh units on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,8 +19,9 @@ STYLESHEET FOR harry-gilbert WEBSITE
 html, body {
     margin: 0;
     padding: 0;
-    position: relative;
-    min-height: 100vh;
+    position: absolute;
+    min-height: 100%;
+    width: 100vw;
     font-family: var(--hg-font);
     font-size: 16px;
     color: var(--hg-text);
@@ -220,8 +221,8 @@ a {
 
 .content-center {
     padding: 0 0 0 25px;
-    position: relative;
-    top: 50vh;
+    position: absolute;
+    top: 50%;
     transform: translateY(-50%);
     width: max-content;
 }
@@ -476,7 +477,8 @@ address a {
 
     .content-center {
         padding: 0;
-        margin: auto;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
     
     .info-page-cont {
@@ -498,9 +500,10 @@ address a {
 
     .who-cont {
         padding: 0;
-        position: relative;
-        top: 50vh;
-        transform: translateY(-50%);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     .who-cont h1 {
